obfuscated twilio auth. outa here github pirates

--- a/views/index.html
+++ b/views/index.html
@@ -75,7 +75,7 @@
     
     });
 
-    socket.on('likes', function(likes){ console.log(likes)} );
+//    socket.on('likes', function(likes){ console.log(likes)} );
 
     </script>
 
